--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dev.finance$</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="shortcut icon" href="assets/plus.svg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&display=swap" rel="stylesheet">   
-
     <link rel="stylesheet" href="./style.css">
 </head>
 
  <body>
-
     <header>
         <img src="./assets/logo.svg" alt="Logo Dev Finance">
 
     </header>
-
     <main class="container">
         <section id="balance">
-            <h2 class="sr-only">Balanço</h2>
+            <h2 class="sr-only">Balance</h2>
 
             <div class="card">
                 <h3>
                     <span>
-                        Entradas
+                        Deposits
                     </span>
-                    <img src="./assets/income.svg" alt="Imagem de entradas">
+                    <img src="./assets/income.svg" alt="Deposit symbol">
                 </h3>
                 <p id="incomeDisplay"></p>
             </div>
@@ -35,9 +32,9 @@
             <div class="card">
                 <h3>
                     <span>
-                        Saídas
+                        Spending
                     </span>
-                    <img src="./assets/expense.svg" alt="Imagem de saídas">
+                    <img src="./assets/expense.svg" alt="Spending symbol">
                 </h3>
                 <p id="expenseDisplay"></p>
             </div>
@@ -47,7 +44,7 @@
                     <span>
                         Total
                     </span>
-                    <img src="./assets/total.svg" alt="Imagem de totais">
+                    <img src="./assets/total.svg" alt="Total">
                 </h3>
                 <p id="totalDisplay"></p>
             </div>     
@@ -56,17 +53,17 @@
 
         <section id="transaction">
             
-            <h2 class="sr-only">Transações</h2>
+            <h2 class="sr-only">Transactions</h2>
             <a href="#"
              onclick="Modal.open()"
-             class="button new">+ Nova Transação</a>
+             class="button new">+ New Transaction</a>
 
             <table id="data-table">
                 <thead>
                     <tr>
-                        <th>Descrição</th>
-                        <th>Valor</th>
-                        <th>Data</th>
+                        <th>Description</th>
+                        <th>Amount</th>
+                        <th>Date</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -83,22 +80,22 @@
             <div class="modal">
                 <div class="modal-content">
                     <div id="form">
-                        <h2>Nova Transação</h2>
+                        <h2>New Transaction</h2>
                         <form action="" onsubmit ="Form.submit(event)">
                             <div class="input-group">
                                 <label  class="sr-only" 
-                                        for="description">Descrição</label>
+                                        for="description">Description</label>
                                 <input 
                                     type="text" 
                                     id="description" 
                                     name="desctription"
-                                    placeholder="Descrição"
+                                    placeholder="Description"
                                 />
                             </div>
 
                             <div class="input-group">
                                 <label  class="sr-only" 
-                                        for="amount">Descrição</label>
+                                        for="amount">Description</label>
                                 <input 
                                     type="number"
                                     step="0.01"
@@ -106,7 +103,7 @@
                                     name="amount"
                                     placeholder="0,00"
                                 />
-                                <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais</small>
+                                <small class="help">Please, use - (negative) for spending an , (comma) for decimals</small>
                             </div>
 
                             <div class="input-group">
@@ -122,8 +119,8 @@
 
                             <div class="input-group actions">
                                 <a onclick="Modal.close()"
-                                 href="#" class="button cancel">Cancelar</a>
-                                <button>Salvar</button>
+                                 href="#" class="button cancel">Cancel</a>
+                                <button>Save</button>
                             </div>
 
                         </form>
