fix: filling modal

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     name="amount"
                                     placeholder="0,00"
                                 />
-                                <small class="help">Please, use - (negative) for spending an , (comma) for decimals</small>
+                                <small class="help">Please, use - (negative) for spending and . (dot) for decimals</small>
                             </div>
 
                             <div class="input-group">
